[package]
name = "anyrender_vello"
description = "Vello backend for anyrender"
version = "0.10.1"
documentation = "https://docs.rs/anyrender_vello"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]

[dependencies]
anyrender = { workspace = true }
wgpu_context = { workspace = true }

debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
vello = { workspace = true }
wgpu = { workspace = true }
rustc-hash = { workspace = true }
futures-channel = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
